--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       <img src="/src/img/cate_2.jpg" alt="bg" class="cateTitle" id="cate2">
       <img src="/src/img/cate_3.jpg" alt="bg" class="cateTitle" id="cate3">
     </div>
+
+    <div id="test"></div>
+    <div id="test2"></div>
+    <div id = "word1" class="wordTitle"></div>
+    <div id = "word2" class="wordTitle"></div>
+    <div id = "join" class="wordnum">0</div>
+    <div id = "new" class="wordnum">0</div>
+    <div id = "act" class="wordnum">0</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
